Update the swagger documentation and make small corrections
